--- a/Mars-Compressed Air/ReadMe
+++ b/Mars-Compressed Air/ReadMe
@@ -1,1 +1,1 @@
-![Compressor Image](https://github.com/HappypsychoX/Stationeers-Scripts/blob/main/Mars-Compressed%20Air/Mars%20Compressor.png?raw=true)
+![Compressor Image](Mars%20Compressor.png)
