--- a/Mars-Compressed Air/ReadMe
+++ b/Mars-Compressed Air/ReadMe
@@ -1,1 +1,1 @@
-![Compressor Image](/Mars-Compressed%20Air/Mars%20Compressor.png)
+![Compressor Image](/Mars-Compressed%20Air/Mars%20Compressor.png?raw=true)
